--- a/style.css
+++ b/style.css
@@ -247,3 +247,25 @@ footer {
   50% { transform: translateY(-12px); }
   100% { transform: translateY(0); }
 }
+.logo-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.logo-main {
+  width: 180px;
+  max-width: 60%;
+  height: auto;
+  display: block;
+  filter: drop-shadow(0 0 30px red);
+}
+
+/* HP */
+@media (max-width: 768px) {
+  .logo-main {
+    width: 130px;
+  }
+}
